Fix body alignment

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
     color: #f2f2f2;
     font-family: 'Belanosima', sans-serif;
     background-color: #36393e;
+    height: 100%;
 }
 
 .topnav a {
@@ -48,10 +49,11 @@ html {
 
 .header {
     display: flex;
-    background-color: #1e2124;
     min-height: 100%;
-    height: 500px;
-    max-height: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    flex-grow: 1;
+    background-color: #1e2124;
     -webkit-box-shadow: inset 0px 0px 149px 19px rgba(0, 0, 0, 0.38);
     -moz-box-shadow: inset 0px 0px 149px 19px rgba(0, 0, 0, 0.38);
     box-shadow: inset 0px 0px 149px 19px rgba(0, 0, 0, 0.38);
@@ -112,6 +114,11 @@ body {
 
 .body .section {
     display: flex;
+    justify-content: center;
+}
+
+.body .section .text {
+    padding: 10px;
 }
 
 .body .invite {
@@ -125,7 +132,6 @@ footer {
     background-color: #1e2124;
     color: #999999;
     width: 100%;
-    height: 100%;
     text-align: center;
 }
 
